<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="20dp"
    android:background="@drawable/pink1"
    tools:context="com.graos.babynew.MainPage">


    <Button
        android:text="@string/button_make_exam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button_style_main_page"
        android:layout_alignParentStart="true"
        android:id="@+id/button4"
        android:onClick="press_Make_Exam"/>

    <Button
        android:text="@string/all_exams_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:background="@drawable/button_style_main_page"
        android:onClick="press_view_all_exams"
        android:layout_alignBaseline="@+id/allExamsButton"
        android:layout_alignBottom="@+id/allExamsButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signOutButton"
        android:background="@drawable/button_style_main_page"
        android:layout_marginBottom="15dp"
        android:onClick="press_sign_Out"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/hello_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameText"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textDirection="ltr"
        android:gravity="right"
        android:textColor="@android:color/background_dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textDirection="ltr"
        android:gravity="right"
        android:id="@+id/weekText"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/nameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/weight_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weightText"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark"
        android:textDirection="ltr"
        android:gravity="right"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/weekText"
        android:layout_toStartOf="@+id/birthText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toLeftOf="@+id/birthText" />

    <TextView
        android:text="@string/birth_view"
        android:layout_width="wrap_content"
        android:textDirection="ltr"
        android:gravity="right"
        android:layout_height="wrap_content"
        android:id="@+id/birthText"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/weightText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/since_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sinceText"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark"
        android:textDirection="ltr"
        android:gravity="right"
        android:layout_below="@+id/nextExamText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <TextView
        android:text="@string/till_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tillText"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark"
        android:textDirection="ltr"
        android:gravity="right"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/sinceText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/next_exam_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nextExamText"
        android:textStyle="bold"
        android:textDirection="ltr"
        android:gravity="right"
        android:textColor="@android:color/background_dark"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/birthText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/button_my_exams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/allExamsButton"
        android:background="@drawable/button_style_main_page"
        android:onClick="press_My_Exams"
        android:layout_marginBottom="23dp"
        android:layout_above="@+id/signOutButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
