<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/pink1"
    tools:context="com.graos.babynew.LoginPage">

    <TextView
        android:text="@string/date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:id="@+id/dateView"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        android:layout_above="@+id/lastDateText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:id="@+id/acceptButton"
        android:background="@drawable/button_style"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="press_OK"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/lastDateText"
        android:hint="@string/date_text"
        android:gravity="center"
        android:elevation="1dp"
        android:ellipsize="start"
        android:background="@drawable/edit_text_style"
        android:textSize="21.3sp"
        tools:ignore="UnusedAttribute"
        android:layout_above="@+id/acceptButton"
        android:layout_alignLeft="@+id/nameText"
        android:layout_alignStart="@+id/nameText"
        android:layout_marginBottom="75dp"
        android:onClick="Set_Date"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameText"
        android:hint="@string/name_text"
        android:gravity="center"
        android:selectAllOnFocus="false"
        android:layout_marginBottom="54dp"
        android:ellipsize="start"
        android:background="@drawable/edit_text_style"
        android:textSize="21.3sp"
        tools:ignore="RelativeOverlap"
        android:layout_above="@+id/dateView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:srcCompat="@mipmap/baby3"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />

    <TextView
        android:text="@string/name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameView"
        android:textDirection="ltr"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="right"
        android:textColor="@android:color/background_dark"
        tools:ignore="RtlHardcoded"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/nameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>

